force-app/main/default/objects/Account/fields/AS400_ID__c.field-meta.xml
<CustomField>
    <fullName>AS400_ID__c</fullName>
    <label>AS/400 ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>