force-app/main/default/objects/Account/fields/Camping_Unit_Length__c.field-meta.xml
<CustomField>
    <fullName>Camping_Unit_Length__c</fullName>
    <label>Camping Unit Length (m)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>