force-app/main/default/objects/Account/fields/COVIDExtensionGranted__c.field-meta.xml
<CustomField>
    <fullName>COVIDExtensionGranted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COVID Extension Granted</label>
    <type>Checkbox</type>
</CustomField>