force-app/main/default/objects/Account/fields/DAInformation__c.field-meta.xml
<CustomField>
    <fullName>DAInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DA Information</label>
    <type>Checkbox</type>
</CustomField>