force-app/main/default/objects/Account/fields/dc__c.field-meta.xml
<CustomField>
    <fullName>dc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer / Advert</label>
    <referenceTo>Dealer_Advert__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>