force-app/main/default/objects/Account/fields/District_Association__c.field-meta.xml
<CustomField>
    <fullName>District_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Association</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Association__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>District Association</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Association__c</referenceTo>
    <relationshipLabel>Memberships (DA)</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>