force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>This is the primary Email contact for the Membership. Typically the Email address of the Lead Member.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>