force-app/main/default/objects/Account/fields/Email_Stop__c.field-meta.xml
<CustomField>
    <fullName>Email_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Email</label>
    <type>Checkbox</type>
</CustomField>