force-app/main/default/objects/Account/fields/Ex_Member_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Ex_Member_Deletion_Date__c</fullName>
    <label>Ex Member - Deletion Date</label>
    <type>Date</type>
</CustomField>