force-app/main/default/objects/Account/fields/ExtensionPaymentAlertFlag__c.field-meta.xml
<CustomField>
    <fullName>ExtensionPaymentAlertFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension Payment Alert Flag</label>
    <type>Checkbox</type>
</CustomField>