force-app/main/default/objects/Account/fields/FreeSections__c.field-meta.xml
<CustomField>
    <fullName>FreeSections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Sections?</label>
    <type>Checkbox</type>
</CustomField>