force-app/main/default/objects/Account/fields/Gift_Pack_No__c.field-meta.xml
<CustomField>
    <fullName>Gift_Pack_No__c</fullName>
    <label>Gift Pack No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>