force-app/main/default/objects/Account/fields/Hybrid_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Membership_Number__c</fullName>
    <formula>IF(
 Old_MN__c = &quot;&quot;, 
 Membership_Number__c , 
 Old_MN__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hybrid Membership Number</label>
    <type>Text</type>
</CustomField>