force-app/main/default/objects/Account/fields/Instant_Membership_Pack_No__c.field-meta.xml
<CustomField>
    <fullName>Instant_Membership_Pack_No__c</fullName>
    <label>Instant Membership Pack No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>