force-app/main/default/objects/Account/fields/Kit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Kit_Issued__c</fullName>
    <label>Kit Issued</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>