force-app/main/default/objects/Account/fields/Last_Replacement_Card_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Replacement_Card_Date__c</fullName>
    <label>Last Replacement Card Date</label>
    <type>Date</type>
</CustomField>