force-app/main/default/objects/Account/fields/Lead_Member__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead member associated with the membership.</description>
    <inlineHelpText>The lead member associated with the membership.</inlineHelpText>
    <label>Lead Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>