force-app/main/default/objects/Account/fields/Mag_Stop__c.field-meta.xml
<CustomField>
    <fullName>Mag_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Magazine</label>
    <type>Checkbox</type>
</CustomField>