force-app/main/default/objects/Account/fields/Magazine_File__c.field-meta.xml
<CustomField>
    <fullName>Magazine_File__c</fullName>
    <formula>IF( 
AND( 
Mag_Stop__c = FALSE, 
Membership_Code__r.Monthly_Magazine__c = TRUE, 
OR( TEXT (Membership_Status__c) = &quot;Paid&quot; , TEXT (Membership_Status__c) = &quot;Non-Renewer&quot; , TEXT (Membership_Status__c) = &quot;DD Pending&quot; , TEXT (Membership_Status__c) = &quot;Lapsed&quot;), 
Renewal_Date__c &gt;= (TODAY() -30 ) 
) 
, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magazine File</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>