force-app/main/default/objects/Account/fields/Mail_Stop__c.field-meta.xml
<CustomField>
    <fullName>Mail_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Direct Mail</label>
    <type>Checkbox</type>
</CustomField>