force-app/main/default/objects/Account/fields/Mail_Stop_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mail_Stop_Reason__c</fullName>
    <label>Mail Stop Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cust. serv. issue</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Employee Member Mailstop</fullName>
            </value>
            <value>
                <fullName>Mail Returned</fullName>
            </value>
            <value>
                <fullName>Press Card Holder</fullName>
            </value>
            <value>
                <fullName>Refer to Manager</fullName>
            </value>
            <value>
                <fullName>Re-Joined</fullName>
            </value>
            <value>
                <fullName>Requested &apos;Right to Erasure&apos; - GDPR</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>