force-app/main/default/objects/Account/fields/Membership_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Club_Product__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Membership Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>