force-app/main/default/objects/Account/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Membership Number</label>
    <type>AutoNumber</type>
</CustomField>