force-app/main/default/objects/Account/fields/membership_renewal_code__c.field-meta.xml
<CustomField>
    <fullName>membership_renewal_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Renewal Code</label>
    <referenceTo>Club_Product__c</referenceTo>
    <relationshipLabel>Accounts (membership renewal code)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>