force-app/main/default/objects/Account/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <color>#33CC00</color>
                <label>Paid</label>
            </value>
            <value>
                <fullName>DD Pending</fullName>
                <color>#FF9900</color>
                <label>DD Pending</label>
            </value>
            <value>
                <fullName>DD Rejected</fullName>
                <color>#FF0000</color>
                <label>DD Rejected</label>
            </value>
            <value>
                <fullName>Lapsed</fullName>
                <color>#FF0000</color>
                <label>Lapsed</label>
            </value>
            <value>
                <fullName>Non-Renewer</fullName>
                <color>#330099</color>
                <label>Non-Renewer</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#999999</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Ex-Member</fullName>
                <color>#3366FF</color>
                <label>Ex-Member</label>
            </value>
            <value>
                <fullName>Refer to Manager</fullName>
                <color>#000000</color>
                <label>Refer to Manager</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <color>#FFFF66</color>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Unpaid</fullName>
                <color>#FF9900</color>
                <label>Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>