force-app/main/default/objects/Account/fields/Membership_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type_Name__c</fullName>
    <formula>Membership_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Type (Name)</label>
    <type>Text</type>
</CustomField>