force-app/main/default/objects/Account/fields/NumHybrid_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>NumHybrid_Membership_Number__c</fullName>
    <formula>VALUE(Hybrid_Membership_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Hybrid Membership Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>