force-app/main/default/objects/Account/fields/Old_MN__c.field-meta.xml
<CustomField>
    <fullName>Old_MN__c</fullName>
    <label>Old Membership Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>