force-app/main/default/objects/Account/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override DA Assignment</label>
    <type>Checkbox</type>
</CustomField>