force-app/main/default/objects/Account/fields/Payment_Method2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method2__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>