force-app/main/default/objects/Account/fields/Payment_Method_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Read_Only__c</fullName>
    <description>Creates read-only version of the Payment Method field, as CCC requested this to be locked down, even from Membership Admins</description>
    <formula>TEXT ( Payment_Method2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>