force-app/main/default/objects/Account/fields/Postcode_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Part_2__c</fullName>
    <description>First digit of the Inward section of the Postcode i.e. 7FG - only includes the first digit and excludes the leading space and the final two letters. Used to determine the Region and DA allocation</description>
    <label>Postcode Part 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>