force-app/main/default/objects/Account/fields/Promotional_Mailstop__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Mailstop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Marketing Direct Mail</label>
    <type>Checkbox</type>
</CustomField>