force-app/main/default/objects/Account/fields/Re_run_Batch_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Re_run_Batch_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-run Batch Renewal</label>
    <type>Checkbox</type>
</CustomField>