force-app/main/default/objects/Account/fields/Ready_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Deletion__c</fullName>
    <formula>IF(Ex_Member_Deletion_Date__c = TODAY(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Deletion</label>
    <type>Checkbox</type>
</CustomField>