force-app/main/default/objects/Account/fields/RenewVSJoinedDate__c.field-meta.xml
<CustomField>
    <fullName>RenewVSJoinedDate__c</fullName>
    <formula>Renewal_Date__c - Date_Joined__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RenewVSJoinedDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>