force-app/main/default/objects/Account/fields/Staff_membership_type__c.field-meta.xml
<CustomField>
    <fullName>Staff_membership_type__c</fullName>
    <inlineHelpText>Only applicable to Staff Memberships</inlineHelpText>
    <label>Staff Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>