force-app/main/default/objects/Account/fields/Status_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Status_Expiry__c</fullName>
    <label>Status Expiry</label>
    <type>Date</type>
</CustomField>