force-app/main/default/objects/Account/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IMAGE( 
CASE(  Membership_Status__c , 
&quot;Incomplete&quot;, &quot;/resource/0000000000000/incomplete2&quot;, 
&quot;Paid&quot;, &quot;/resource/0000000000000/paid2&quot;,  
&quot;Unpaid&quot;, &quot;/resource/0000000000000/unpaid2&quot;, 
&quot;Lapsed&quot;, &quot;/resource/0000000000000/lapsed2&quot;, 
&quot;Ex-Member&quot;, &quot;/resource/0000000000000/exmember2&quot;, 
&quot;Refer to Manager&quot;, &quot;/resource/0000000000000/refer2&quot;, 
&quot;Non-Renewer&quot;, &quot;/resource/0000000000000/nonrenewer&quot;, 
&quot;Cancelled&quot;, &quot;/resource/0000000000000/cancelled&quot;, 
&quot;DD Rejected&quot;, &quot;/resource/0000000000000/ddrejected&quot;, 
&quot;DD Pending&quot;, &quot;/resource/0000000000000/ddpending&quot;, 
&quot;DD Mandate Rejected&quot;, &quot;/resource/0000000000000/ccc_ddmanrejected&quot;, 
&quot;DD Payment Rejected&quot;, &quot;/resource/0000000000000/ccc_ddpayrejected&quot;, 
&quot;Payment Rejected&quot;, &quot;/resource/0000000000000/red_cross&quot;, 
&quot;/resource/0000000000000/transparent3d&quot;), 
&quot;Membership Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>