force-app/main/default/objects/Account/fields/Stop_Marketing_SMS__c.field-meta.xml
<CustomField>
    <fullName>Stop_Marketing_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Marketing SMS</label>
    <type>Checkbox</type>
</CustomField>