force-app/main/default/objects/Account/fields/Stop_Out_About_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Stop_Out_About_Supplement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Records contact preference for the &quot;Out &amp; About Supplement&quot;</description>
    <label>Stop Out &amp; About Supplement</label>
    <type>Checkbox</type>
</CustomField>