force-app/main/default/objects/Account/fields/Subs_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Subs_Due_Date__c</fullName>
    <label>Subs Due Date</label>
    <type>Date</type>
</CustomField>