force-app/main/default/objects/Account/fields/Subs_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Subs_Paid_Date__c</fullName>
    <label>Subs Paid Date</label>
    <type>Date</type>
</CustomField>