force-app/main/default/objects/Account/fields/Subs_Received__c.field-meta.xml
<CustomField>
    <fullName>Subs_Received__c</fullName>
    <label>Subs Received</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>