force-app/main/default/objects/Account/fields/Tenure2__c.field-meta.xml
<CustomField>
    <fullName>Tenure2__c</fullName>
    <formula>IF (MONTH(TODAY()) &gt; MONTH(Date_Joined__c), 
(YEAR(TODAY()) - YEAR(Date_Joined__c) + 1), 
IF (MONTH(TODAY()) = MONTH(Date_Joined__c), 
IF (DAY(TODAY()) &gt;= DAY(Date_Joined__c), 
(YEAR(TODAY()) - YEAR(Date_Joined__c) + 1), 
YEAR(TODAY()) - YEAR(Date_Joined__c) 
), 
YEAR(TODAY()) - YEAR(Date_Joined__c) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure (yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>