force-app/main/default/objects/Account/fields/Tenure_Lock__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the Tenure has been manually edited</inlineHelpText>
    <label>Tenure Adjusted</label>
    <type>Checkbox</type>
</CustomField>