force-app/main/default/objects/Account/fields/testOutbound__c.field-meta.xml
<CustomField>
    <fullName>testOutbound__c</fullName>
    <description>this is just a field to test the outbound message</description>
    <label>testOutbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>