force-app/main/default/objects/Account/recordTypes/Memberships.recordType-meta.xml
<RecordType>
    <fullName>Memberships</fullName>
    <active>true</active>
    <label>Memberships</label>
</RecordType>