force-app/main/default/objects/Account/validationRules/Contact_Pref_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Pref_Email</fullName>
    <active>false</active>
    <description>Email can&apos;t be the preferred Contact Method if there is no email address on the Membership record</description>
    <errorConditionFormula>ISBLANK( Email__c )  &amp;&amp;   ISPICKVAL( Contact_Method__c , &apos;Email&apos;)</errorConditionFormula>
    <errorDisplayField>Contact_Method__c</errorDisplayField>
    <errorMessage>Contact Method can&apos;t be Email if there is no Email Address for the Membership</errorMessage>
</ValidationRule>