force-app/main/default/objects/Account/validationRules/Online_Membership_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Online_Membership_Payment</fullName>
    <active>false</active>
    <description>Forces Online Memberships to be created with Direct Debit payment method only</description>
    <errorConditionFormula>Membership_Type_Name__c  = &apos;Online&apos;  &amp;&amp; 
NOT ISPICKVAL(Payment_Method2__c  , &apos;Direct Debit&apos;)</errorConditionFormula>
    <errorMessage>Payment Method must be &apos;Direct Debit&apos; for Membership Types of ONLINE (40)</errorMessage>
</ValidationRule>