force-app/main/default/objects/Account/validationRules/Read_only_Membership_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_only_Membership_Name</fullName>
    <active>false</active>
    <description>Prevent Contact Centre Profile from modifying the Membership Name during edit</description>
    <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name = &quot;Contact Centre&quot;, NOT( ISNEW() ) 
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You cannot change the Membership Name</errorMessage>
</ValidationRule>