force-app/main/default/objects/Account/listViews/All_New_Joiners_this_wek.listView-meta.xml
<ListView>
    <fullName>All_New_Joiners_this_wek</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Membership_Type_Name__c</columns>
    <columns>Status_Indicator__c</columns>
    <columns>Application_Source__c</columns>
    <columns>Date_Joined__c</columns>
    <columns>Payment_Method2__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Joined__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Application_Source__c</field>
        <operation>equals</operation>
        <value>Internet</value>
    </filters>
    <label>New Joiners this week via Internet</label>
</ListView>